--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "mock": "node api/mock/server",
-    "mock-auth": ""
+    "mock": "node api/mock/server"
   },
   "dependencies": {
     "@vueuse/components": "^9.2.0",
